; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfsdirent_label_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_devfsdirent_label_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.label = type { i32 }

@MAC_WAITOK = common dso_local global i32 0, align 4
@devfs_label_init = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.label* ()* @mac_devfsdirent_label_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.label* @mac_devfsdirent_label_alloc() #0 {
  %1 = alloca %struct.label*, align 8
  %2 = alloca %struct.label*, align 8
  %3 = load i32, i32* @MAC_WAITOK, align 4
  %4 = call %struct.label* @mac_labelzone_alloc(i32 %3)
  store %struct.label* %4, %struct.label** %2, align 8
  %5 = load %struct.label*, %struct.label** %2, align 8
  %6 = icmp eq %struct.label* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store %struct.label* null, %struct.label** %1, align 8
  br label %13

8:                                                ; preds = %0
  %9 = load i32, i32* @devfs_label_init, align 4
  %10 = load %struct.label*, %struct.label** %2, align 8
  %11 = call i32 @MAC_PERFORM(i32 %9, %struct.label* %10)
  %12 = load %struct.label*, %struct.label** %2, align 8
  store %struct.label* %12, %struct.label** %1, align 8
  br label %13

13:                                               ; preds = %8, %7
  %14 = load %struct.label*, %struct.label** %1, align 8
  ret %struct.label* %14
}

declare dso_local %struct.label* @mac_labelzone_alloc(i32) #1

declare dso_local i32 @MAC_PERFORM(i32, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
